--- a/viewer/index.html
+++ b/viewer/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="bundle.js" async></script>
   <link href="https://fonts.googleapis.com/css?family=Lato|Play" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Learning tangle visualization</title>
+  <title>IOTA visualization</title>
 
   <script>
     window.addEventListener('load', function() {
